# luzIA-API

./: .gitignore  pyproject.toml
.github/workflows/: docker-publish-prd.yaml
app/: __init__.py  app.py  boot.sh  config.py  db.py  main.py  models.py
app/application/: routes.py
app/utilities/: cam_models.py
infra/: Dockerfile  docker-compose.yml
